Fixed top menu player from scrolling. Adjustment to element spacing and padding.

--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,34 @@
 			 margin: 1em 2em 0em 3em !important;
 		 }
 
+
+/** Main top menu styling **/
+     .ui.inverted.top.menu {
+       background-color: var(--colrfgd1) !important;
+       color: var(--colrfnt1);
+     }
+
+		 .slider.item {
+			 display: inline-block;
+			 width: 10%;
+			 padding-top: 1.4em;
+		 }
+
+		 .lshift.item {
+			 display: inline-block;
+			 padding-top: 1.4em;
+			 padding-left: 0em;
+			 padding-right: 3em;
+		 }
+
+		 .rshift.item {
+			 display: inline-block;
+			 padding-top: 1.4em;
+			 padding-left: 3em;
+			 margin-right: 0em;
+		 }
+
+
 /** Main side menu styling **/
 		.sidemenu.column {
 		 background-color: var(--colrfgd1);
@@ -162,7 +190,7 @@
      .ui.inverted.side.menu {
        background-color: var(--colrfgd1) !important;
 			 color: var(--colrfnt1) !important;
-			 margin: 2em 0em 0em 2em;
+			 margin: 8em 0em 0em 2em;
      }
 
 		 .ui.menu .active.item {
@@ -231,12 +259,6 @@
 		 }
 
 /** Page segments styling **/
-     .ui.inverted.top.segment {
-       background-color: var(--colrfgd1) !important;
-       color: var(--colrfnt1);
-			 padding: 1em 2em;
-     }
-
      .ui.inverted.spacecadet.segment {
        background-color: var(--colrfgd1) !important;
        color: var(--colrfnt1) !important;
@@ -248,6 +270,7 @@
      .ui.inverted.manatee.segment {
        background-color: var(--colrbgd1) !important;
        color: var(--colrfnt2) !important;
+			 margin-top: 6em !important;
      }
 
      .ui.inverted.space.segment {
